<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.components.home.HomeActivity">

    <Button
        android:id="@+id/showUsersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_show_users"/>

    <Button
        android:id="@+id/showUsersWithPagingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_show_users_with_paging"/>

    <Button
        android:id="@+id/generateUsersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_generate_users"/>

</LinearLayout>
